<resources>
    <string name="app_name">Biue</string>
    <string name="username_hint">请填入用户名</string>
    <string name="home_fragment">主页</string>
    <string name="pre_fragment">准备页</string>
    <string name="config_file_name">config</string>
    <string name="username_default">admin</string>
    <string name="username_key">username</string>
    <string name="confirm">确认</string>

    <string name="bottom_menu_bluetooth">蓝牙</string>
    <string name="bottom_menu_upload">上传</string>
    <string name="bottom_menu_waves">波形</string>
    <string name="bottom_menu_settings">设置</string>


    <string name="preference_group_user">用户</string>
    <string name="preference_user_edit_title">当前用户名</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- 设置界面标题 -->
    <string name="title_operator">操作者信息</string>
    <string name="title_cloud">服务器信息</string>

    <!--  设置界面具体内容的标题  -->
    <string name="title_operator_name">操作者姓名</string>
    <string name="title_cloud_ip">ip地址</string>
    <string name="title_cloud_port">端口号</string>

    <!--  设置信息对应的key   -->
    <string name="key_operator_name">operator_name</string>
    <string name="key_cloud_ip">cloud_ip</string>
    <string name="key_cloud_port">cloud_port</string>
    <string name="fragment_user_add">添加被采集者信息</string>
    <string name="title_place_holder">Title Place Holder</string>
    <string name="content_place_holder">Content Place Holder</string>


    <string name="collection_prompt">被采集用户</string>
</resources>