<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/default_nav"
    app:startDestination="@id/cloudUploadFragment">
    <!--在这里可以设置默认启动界面-->

    <fragment
        android:id="@+id/blueToothFragment"
        android:name="com.mxarcher.biue.fragment.BlueToothFragment"
        android:label="@string/bottom_menu_bluetooth"
        tools:layout="@layout/blue_tooth_fragment" />
    <fragment
        android:id="@+id/wavesFragment"
        android:name="com.mxarcher.biue.fragment.WavesFragment"
        android:label="@string/bottom_menu_waves"
        tools:layout="@layout/waves_fragment" />
    <fragment
        android:id="@+id/cloudUploadFragment"
        android:name="com.mxarcher.biue.fragment.CloudUploadFragment"
        android:label="@string/bottom_menu_upload"
        tools:layout="@layout/cloud_upload_fragment" />
</navigation>